# Sum_pract

./: CMakeLists.txt  README.md
pract_src/: CMakeLists.txt
pract_src/sum_pract/: draw.py  graph.cpp  graph.h
pract_tests/: CMakeLists.txt  pract_tests.cpp
